# SCGraph

./: .gitignore  CMakeLists.txt  INSTALL  README
cmake_modules/: FindFFmpeg.cmake  FindFTGL.cmake
scgraph.xcodeproj/: project.pbxproj
scgraph.xcodeproj/xcshareddata/xcschemes/: scgraph Debug.xcscheme  scgraph Release.xcscheme
scgraph.xcodeproj/xcuserdata/hb.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  color_rgba.cc  color_rgba.h  control.cc  control.h  control_loop.cc  control_loop.h  cow_ptr.h  face.cc  face.h  graphic_loop.cc  graphic_loop.h  graphics.cc  graphics.h  graphics_visitor.cc  graphics_visitor.h  in_out.cc  in_out.h  jack_client.cc  jack_client.h  main.cc  main.cpp  material.cc  material.h  matrix.cc  matrix.h  node_tree.cc  obj_loader.cc  obj_loader.h  ofApp.cpp  ofApp.h  options.cc  osc_handler.cc  osc_handler.cp  osc_handler.h  plugin.cc  plugin_pool.cc  plugin_pool.h  sc__unit.cc  sc_unit_wrapper.cc  (+26 more)
src/glew/: glew.c
src/plugins/: CMakeLists.txt  binary_op.cc  binary_op.h  bordered_rectangle.cc  buf_info_ugens.cc  buf_info_ugens.h  circle.cc  color.cc  color.h  cube.cc  frame_rate.cc  frame_rate.h  freq_amp.cc  freq_amp.h  gl_renderer.cc  gl_renderer.h  light.cc  light.h  line.cc  material.cc  material.h  model.cc  model.h  points.cc  polygon.cc  polygon.h  quad.cc  quad.h  rectangle.cc  render_mode.cc  render_mode.h  rotate.cc  shader_program.cc  stretch.cc  text.cc  text.h  transformation.cc  translate.cc  triangle.cc  tube.cc
src/sc/: BufFrameRate.sc  FrameRate.sc  GBlending.sc  GColor.sc  GCulling.sc  GFBTexQuad.sc  GFreqAmp.sc  GGLRenderer.sc  GLight.sc  GLighting.sc  GMaterial.sc  GRenderMode.sc  GRotate.sc  GShaderProgram.sc  GStretch.sc  GTexQuad.sc  GText.sc  GTransform.sc  GTranslate.sc  GeometryUGens.sc  GraphicsUGen.sc  InOut.sc
src/sc/HelpSource/Classes/: FrameRate.schelp  GFBTexQuad.schelp  GFreqAmp.schelp  GGLRenderer.schelp  GLine.schelp  GQuad.schelp  GRectangle.schelp  GRenderMode.schelp  GServer.schelp  GText.schelp
src/sc/HelpSource/Reference/: Shaders.schelp  scgraph.schelp
src/sc/utils/: GServer.sc
src/tests/: CMakeLists.txt
